[package]
name = "mesalink"
version = "1.1.0-beta"
edition = "2018"
authors = ["The MesaLink Project Contributors"]
license = "BSD-3-Clause"
readme = "README.md"
description = "MesaLink is a memory-safe and OpenSSL-compatible TLS library based on Rustls and Ring."
keywords = ["tls", "ssl", "rust"]
homepage = "https://github.com/mesalock-linux/mesalink"
repository = "https://github.com/mesalock-linux/mesalink"
categories = ["network-programming"]
build = "build.rs"

[badges]
travis-ci = { repository = "mesalock-linux/mesalink", branch = "master"  }

[lib]
name = "mesalink"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["client_apis", "server_apis", "error_strings", "tls13", "aesgcm", "chachapoly", "x25519", "ecdh", "ecdsa", "verifier", "sgx"]
client_apis = []
server_apis = []
error_strings = ["rustls/logging"]
tls13 = ["rustls/tls13"]
aesgcm = ["rustls/aesgcm"]
chachapoly = ["rustls/chachapoly"]
x25519 = ["rustls/x25519"]
ecdh = ["rustls/ecdh"]
ecdsa = ["rustls/ecdsa"]
verifier = ["rustls/dangerous_configuration"]
no_sni_check = ["rustls/no_sni_check"]
sgx = ["rustls/sgx"]
nightly = []
jemalloc_allocator = ["jemallocator"]

[dependencies]
ring = "0.16"
untrusted = "0.7"
env_logger = "0.7"
libc = "0.2"
lazy_static = "1.4"
enum_to_u8_slice_derive = "0.1"
bitflags = "1.2"
base64 = "0.11"
parking_lot = "0.9"
jemallocator = { version = "0.3", optional = true }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalink"
default-features = false

[dependencies.webpki]
git = "https://github.com/mesalock-linux/webpki"
tag = "v1.1.0"
default-features = false

[dependencies.sct]
git = "https://github.com/mesalock-linux/sct.rs"
tag = "v1.1.0"
default-features = false

[dependencies.webpki-roots]
git = "https://github.com/mesalock-linux/webpki-roots"
tag = "v1.1.0"
default-features = false

[dev-dependencies]
log = "0.4"
env_logger = "0.7"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
overflow-checks = true

[[example]]
name = "bogo_shim"
path = "examples/bogo_shim/bogo_shim.rs"
required-features = ["verifier", "error_strings", "tls13", "aesgcm", "chachapoly", "x25519", "ecdh", "ecdsa"]
