[package]
name = "mesalink"
version = "0.10.1"
edition = "2018"
authors = ["The MesaLink Project Contributors"]
license = "BSD-3-Clause"
readme = "README.md"
description = "MesaLink is a memory-safe and OpenSSL-compatible TLS library based on Rustls and Ring."
keywords = ["tls", "ssl", "rust"]
homepage = "https://github.com/mesalock-linux/mesalink"
repository = "https://github.com/mesalock-linux/mesalink"
categories = ["network-programming"]
build = "build.rs"

[badges]
travis-ci = { repository = "mesalock-linux/mesalink", branch = "master"  }

[lib]
name = "mesalink"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["error_strings", "verifier"]
error_strings = ["rustls/logging"]
verifier = ["rustls/dangerous_configuration"]
jemalloc_allocator = ["jemallocator"]

[dependencies]
rustls = { version = "0.19.0", default-features = false }
ring = "0.16.19"
webpki = "0.21.4"
webpki-roots = "0.21.0"
sct = "0.6.0"
untrusted = "0.7"
env_logger = "0.8.2"
libc = "0.2"
lazy_static = "1.4"
enum_to_u8_slice_derive = "0.2"
bitflags = "1.2"
base64 = "0.13.0"
parking_lot = "0.11.0"
jemallocator = { version = "0.3", optional = true }

[dev-dependencies]
log = "0.4"
env_logger = "0.8.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
overflow-checks = true

[[example]]
name = "bogo_shim"
path = "examples/bogo_shim/bogo_shim.rs"
required-features = ["verifier", "error_strings"]
